jstests/replsets/tenant_migration_concurrent_reads.js
@@ -47,11 +47,22 @@ function resumeMigrationAfterBlockingRead(host, targetBlockedReads) {
         {configureFailPoint: "pauseTenantMigrationAfterBlockingStarts", mode: "off"}));
 }
 
-function runCommand(db, cmd, expectedError) {
+function runCommand(db, cmd, expectedError, isTransaction) {
     const res = db.runCommand(cmd);
 
     if (expectedError) {
         assert.commandFailedWithCode(res, expectedError);
+        // The 'TransientTransactionError' label is attached only in a scope of a transaction.
+        if (isTransaction &&
+            (expectedError == ErrorCodes.TenantMigrationAborted ||
+             expectedError == ErrorCodes.TenantMigrationCommitted)) {
+            assert(res["errorLabels"] != null, "Error labels are absent from " + tojson(res));
+            const expectedErrorLabels = ['TransientTransactionError'];
+            assert.sameMembers(res["errorLabels"],
+                               expectedErrorLabels,
+                               "Error labels " + tojson(res["errorLabels"]) +
+                                   " are different from expected " + expectedErrorLabels);
+        }
     } else {
         assert.commandWorked(res);
     }
@@ -92,12 +103,17 @@ function testReadIsRejectedIfSentAfterMigrationHasCommitted(testCase, dbName, co
         if (testCase.requiresReadTimestamp) {
             runCommand(db,
                        testCase.command(collName, donorDoc.blockTimestamp),
-                       ErrorCodes.TenantMigrationCommitted);
+                       ErrorCodes.TenantMigrationCommitted,
+                       testCase.isTransaction);
             runCommand(db,
                        testCase.command(collName, donorDoc.commitOrAbortOpTime.ts),
-                       ErrorCodes.TenantMigrationCommitted);
+                       ErrorCodes.TenantMigrationCommitted,
+                       testCase.isTransaction);
         } else {
-            runCommand(db, testCase.command(collName), ErrorCodes.TenantMigrationCommitted);
+            runCommand(db,
+                       testCase.command(collName),
+                       ErrorCodes.TenantMigrationCommitted,
+                       testCase.isTransaction);
         }
     });
 }
@@ -133,10 +149,16 @@ function testReadIsAcceptedIfSentAfterMigrationHasAborted(testCase, dbName, coll
     nodes.forEach(node => {
         const db = node.getDB(dbName);
         if (testCase.requiresReadTimestamp) {
-            runCommand(db, testCase.command(collName, donorDoc.blockTimestamp));
-            runCommand(db, testCase.command(collName, donorDoc.commitOrAbortOpTime.ts));
+            runCommand(db,
+                       testCase.command(collName, donorDoc.blockTimestamp),
+                       null,
+                       testCase.isTransaction);
+            runCommand(db,
+                       testCase.command(collName, donorDoc.commitOrAbortOpTime.ts),
+                       null,
+                       testCase.isTransaction);
         } else {
-            runCommand(db, testCase.command(collName));
+            runCommand(db, testCase.command(collName), null, testCase.isTransaction);
         }
     });
 }
@@ -177,7 +199,10 @@ function testReadBlocksIfMigrationIsInBlocking(testCase, dbName, collName) {
     const nodes = testCase.isSupportedOnSecondaries ? donorRst.nodes : [donorPrimary];
     nodes.forEach(node => {
         const db = node.getDB(dbName);
-        runCommand(db, command, testCase.isLinearizableRead ? null : ErrorCodes.MaxTimeMSExpired);
+        runCommand(db,
+                   command,
+                   testCase.isLinearizableRead ? null : ErrorCodes.MaxTimeMSExpired,
+                   testCase.isTransaction);
     });
 
     blockingFp.off();
@@ -238,7 +263,7 @@ function testBlockedReadGetsUnblockedAndRejectedIfMigrationCommits(testCase, dbN
     // is rejected.
     nodes.forEach(node => {
         const db = node.getDB(dbName);
-        runCommand(db, command, ErrorCodes.TenantMigrationCommitted);
+        runCommand(db, command, ErrorCodes.TenantMigrationCommitted, testCase.isTransaction);
     });
 
     // Verify that the migration succeeded.
@@ -301,7 +326,7 @@ function testBlockedReadGetsUnblockedAndSucceedsIfMigrationAborts(testCase, dbNa
     // unblocks.
     nodes.forEach(node => {
         const db = node.getDB(dbName);
-        runCommand(db, command);
+        runCommand(db, command, null, testCase.isTransaction);
     });
 
     // Verify that the migration failed due to the simulated error.
@@ -340,6 +365,7 @@ const testCases = {
     snapshotReadWithAtClusterTimeInTxn: {
         isSupportedOnSecondaries: false,
         requiresReadTimestamp: true,
+        isTransaction: true,
         command: function(collName, readTimestamp) {
             return {
                 find: collName,
@@ -353,6 +379,7 @@ const testCases = {
     },
     snapshotReadWithoutAtClusterTimeInTxn: {
         isSupportedOnSecondaries: false,
+        isTransaction: true,
         command: function(collName) {
             return {
                 find: collName,
@@ -370,6 +397,23 @@ const testCases = {
         command: function(collName, readTimestamp) {
             return {
                 find: collName,
+                readConcern: {
+                    afterClusterTime: readTimestamp,
+                }
+            };
+        },
+    },
+    readWithAfterClusterTimeInTxn: {
+        isSupportedOnSecondaries: false,
+        requiresReadTimestamp: true,
+        isTransaction: true,
+        command: function(collName, readTimestamp) {
+            return {
+                find: collName,
+                lsid: {id: UUID()},
+                txnNumber: NumberLong(0),
+                startTransaction: true,
+                autocommit: false,
                 readConcern: {
                     afterClusterTime: readTimestamp,
                 }
